test/fail_compilation/fail110.d
// 297

void main() {
        int i;
        int[] a;
        foreach (i; a) {}
        foreach (int i, n; a) {}
        for (int i;;) {}
}
